--- a/smart-test-generation/client/src/index.css
+++ b/smart-test-generation/client/src/index.css
@@ -4,13 +4,15 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgb(255, 255, 255);
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --genezio-green: #00c883;
 }
 
 a {
@@ -57,9 +59,24 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.textfield {
+  width: 80%;
+  height: 30px;
+}
+
+.i {  
+  color: var(--genezio-green);
+  position: -3em;
+}
+.i:before {
+  content: "ı";
+  position: absolute; 
+  color: white;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #000000;
     background-color: #ffffff;
   }
   a:hover {
@@ -68,9 +85,10 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+  .i:before {
+    content: "ı";
+    position: absolute; 
+    color: rgb(0, 0, 0);
+  }
 }
 
-.textfield {
-  width: 80%;
-  height: 30px;
-}
