--- a/smart-test-generation/client/src/index.css
+++ b/smart-test-generation/client/src/index.css
@@ -14,6 +14,7 @@
 
   --genezio-green: #00c883;
   --genezio-purple: #4c2e85;
+  --genezio-red: red;
   --disabled-button-background-color: #EEEEEE;
   --disabled-button-text-color: #222831;
   --folder-selector-arrow: #267B84;
@@ -103,6 +104,18 @@ button:focus-visible {
 
 .files-browser {
   border: 2px solid white;
+}
+
+.edit-button {
+  background-color: var(--genezio-green);
+}
+
+.cancel-button {
+  background-color: var(--genezio-red);
+}
+
+.save-button {
+  background-color: var(--folder-selector-arrow);
 }
 
 @media (prefers-color-scheme: light) {
